WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167472
REGRESSION (
r207483
): Touch Bar: Lists and BIU Buttons Missing from Touch Bar in HTML Notes
https://bugs.webkit.org/show_bug.cgi?id=167472
Summary
REGRESSION (r207483): Touch Bar: Lists and BIU Buttons Missing from Touch Bar...
Wenson Hsieh
Reported
2017-01-26 16:17:39 PST
The touch bar does not appear in HTML notes due to a recent regression.
Attachments
Patch
(2.00 KB, patch)
2017-01-26 16:24 PST
,
Wenson Hsieh
bdakin
: review+
Details
Formatted Diff
Diff
Patch for landing
(1.99 KB, patch)
2017-01-26 16:30 PST
,
Wenson Hsieh
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(1.98 KB, patch)
2017-01-26 16:40 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-01-26 16:20:02 PST
<
rdar://problem/30149809
>
Wenson Hsieh
Comment 2
2017-01-26 16:24:03 PST
Created
attachment 299875
[details]
Patch
Wenson Hsieh
Comment 3
2017-01-26 16:30:18 PST
Created
attachment 299876
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2017-01-26 16:33:20 PST
Comment on
attachment 299876
[details]
Patch for landing Rejecting
attachment 299876
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 299876, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/mac/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/2955072
Wenson Hsieh
Comment 5
2017-01-26 16:40:31 PST
Created
attachment 299879
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-01-26 17:02:49 PST
Comment on
attachment 299879
[details]
Patch for landing Clearing flags on attachment: 299879 Committed
r211243
: <
http://trac.webkit.org/changeset/211243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug