REGRESSION (r207483): Touch Bar: Lists and BIU Buttons Missing from Touch Bar in HTML Notes https://bugs.webkit.org/show_bug.cgi?id=167472 <rdar://problem/30149809>

Reviewed by Beth Dakin.

Revision 207483 caused the touch bar to stop showing up in HTML Notes due to -updateTextTouchBar not
initializing the text touch bar and causing -makeTouchBar to return nil while processing a mouse click. The
purpose of bailing out of the update was to prevent the text touch bar from thrashing during a selection drag.
If the text touch bar doesn't exist yet, we don't have to worry about its appearance flickering from a different
previous state, so we should just allow the touch bar to update instead.

* WebView/WebView.mm:
(-[WebView updateTextTouchBar]):


Canonical link: https://commits.webkit.org/184519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211243 268f45cc-cd09-0410-ab3c-d52691b4dbfc